social media updates

--- a/index-SINGLE-IMAGE.html
+++ b/index-SINGLE-IMAGE.html
@@ -1092,28 +1092,16 @@
               <div class="social-icons-wrapper">
                 <ul class="social-icons">
                   <li class="social-icon">
-                    <a class="ion-social-twitter" href="#"></a>
+                    <a
+                      class="ion-social-facebook"
+                      href="https://www.facebook.com/sashquatchphotography"
+                    ></a>
                   </li>
                   <li class="social-icon">
-                    <a class="ion-social-facebook" href="#"></a>
-                  </li>
-                  <li class="social-icon">
-                    <a class="ion-social-googleplus" href="#"></a>
-                  </li>
-                  <li class="social-icon">
-                    <a class="ion-social-youtube" href="#"></a>
-                  </li>
-                  <li class="social-icon">
-                    <a class="ion-social-linkedin" href="#"></a>
-                  </li>
-                  <li class="social-icon">
-                    <a class="ion-social-instagram" href="#"></a>
-                  </li>
-                  <li class="social-icon">
-                    <a class="ion-social-pinterest" href="#"></a>
-                  </li>
-                  <li class="social-icon">
-                    <a class="ion-social-dribbble" href="#"></a>
+                    <a
+                      class="ion-social-instagram"
+                      href="https://www.instagram.com/sashquatchphotography/"
+                    ></a>
                   </li>
                 </ul>
               </div>
