fixes and shtuff

--- a/index-SINGLE-IMAGE.html
+++ b/index-SINGLE-IMAGE.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    -
     <meta charset="utf-8" />
-    <title>The Dive || The Template</title>
+    <title>Sasquatch Photography</title>
     <meta content="" name="description" />
     <meta content="" name="author" />
     <meta content="" name="keywords" />
@@ -33,6 +34,7 @@
         </div>
       </div>
     </div>
+    -
     <!-- preloader end -->
     <!-- logo start -->
     <a class="logo logo-light"> <div class="logo-img fadeIn-element"></div></a
@@ -102,6 +104,9 @@
               >
             </div>
           </div>
+          <a style="z-index: 1" class="c-btn inverse" href="#works"
+            ><span>My Portfolio</span></a
+          >
           <!-- home subtitle end -->
         </div>
         <!-- introduction end -->
